refactor/OPS-360 : default 폴더 CRUD 로직 수정